--- a/templates/coverage_gaps.html
+++ b/templates/coverage_gaps.html
@@ -167,7 +167,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
                             <i class="bi bi-person-circle"></i> {{ current_user.name }}
-                        </a>
+                        </div>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><a class="dropdown-item" href="/logout">Logout</a></li>
                         </ul>
