--- a/templates/adjust_coverage.html
+++ b/templates/adjust_coverage.html
@@ -236,7 +236,7 @@
                         <a class="nav-link" href="/dashboard">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/supervisor/coverage-needs">Adjust Coverage</a>
+                        <a class="nav-link active" href="/adjust-coverage">Adjust Coverage</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
