--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -320,7 +320,7 @@
                 </a>
                 
                 <!-- View Employees and Crews -->
-                <a href="/dashboard" class="access-card card-employees">
+                <a href="/view-employees-crews" class="access-card card-employees">
                     <i class="bi bi-people-fill"></i>
                     <div class="access-card-content">
                         <h3>View Employees & Crews</h3>
